# napari-micromanager

./:  demo_test  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  README.md  ask_talley.txt  codecov.yml  guist.py  index.html  install_mm.ps1  install_mm.sh  launch-dev.py  mkdocs.yml  objects.inv  pymmcore-10.1.0.0.dev0-cp39-cp39-macosx_10_9_x86_64.whl  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  sub.py  test.py  test2.py  tox.ini  untitled.ui
.github/ISSUE_TEMPLATE/: bug_report.md  other-issue.md
.github/workflows/: ci.yml  docs.yml  python-app.yml  test.yml
docs/: getting_started.md
examples/: run_mda.py
getting_started/: index.html
micromanager_gui/: __init__.py  __main__.py  _autofocus.py  _camera_roi.py  _controller.py  _core.py  _core_funcs.py  _experiment.py  _group_and_presets_tab.py  _gui.py  _histogram.py  _illumination.py  _main_gui.py  _mda.py  _mda_meta.py  _plugins.py  _properties_table_checkbox.py  _properties_table_with_checkbox.py  _saving.py  _signals.py  _tab_group_and_presets.py  _util.py  _version.py  add_LUT.py  demo_config.cfg  demo_config_1.cfg  explore_sample.py  explore_sample.ui  install_mm.py  main_window.py  mda_gui.ui  micromanager.ui  micromanager_full_gui.ui  micromanager_gui.ui  micromanager_gui_1.ui  micromanager_gui_group_box.ui  micromanager_gui_old.ui  micromanager_gui_test.ui  mmcore_pymmcore.py  multid_gui.ui  (+8 more)
micromanager_gui/_core/: _client.py  _mmcore_plus.py  _pyrocore.py  _serialize.py  _server.py  _util.py  qmmcore.py
micromanager_gui/_core_widgets/: __init__.py  _device_widget.py  _exposure_widget.py  _live_button.py  _live_button_widget.py  _presets_widget.py  _property_browser.py  _property_widget.py  _set_pixel_size.py  _shutter_widget.py  _snap_button_widget.py  _stage_widget.py
micromanager_gui/_gui/: _camera_widget.py  _illumination_widget.py  _main_gui.py  _mm_configuration_widget.py  _objective_widget.py  _tab_widget.py  _xyz_stages.py
micromanager_gui/_gui_objects/: _MMshutters_widget.py  _cam_roi_widget.py  _camera_widget.py  _channel_widget.py  _config_widget.py  _device_widget.py  _group_preset_table_widget.py  _group_preset_widget.py  _hcs_widget.py  _illumination_widget.py  _main_dock_widget.py  _mda_widget.py  _min_max_widget.py  _mm_configuration_widget.py  _mm_shutters_widget.py  _mm_widget.py  _objective_widget.py  _preset_widget.py  _presets_widget.py  _property_browser_widget.py  _property_widget.py  _sample_explorer_widget.py  _shutters_widget.py  _slider_dialog.py  _snap_live_widget.py  _stages_widget.py  _tab_widget.py  _xyz_stages.py  explore_sample.ui  mm_xyz_stage.ui  multid_gui.ui
micromanager_gui/_gui_objects/_mda_widget/: _mda_gui.py  _mda_widget.py
micromanager_gui/_gui_objects/_sample_explorer_widget/: _sample_explorer_gui.py  _sample_explorer_widget.py
micromanager_gui/_ui/: explore_sample.ui  micromanager_gui.ui  mm_camera.ui  mm_configuration.ui  mm_illumination.ui  mm_objectives.ui  mm_snap_and_tabs.ui  mm_xyz_stage.ui  multid_gui.ui  multid_gui_1.ui  ndacq.ui
micromanager_gui/remoteobj/: proxy.py  proxy2.py  qfuture.py  server.py  server2.py
micromanager_gui/sequence/: __init__.py  _channel.py  _mda_event.py  _mda_sequence.py  _position.py  _time.py  _z.py
micromanager_gui/sequence/_tests/: test_sequence.py
search/: search_index.json
src/napari_micromanager/: __init__.py  __main__.py  _core_link.py  _init_system_configs.py  _mda_handler.py  _mda_meta.py  _saving.py  _util.py  main_window.py  napari.yaml
src/napari_micromanager/_gui_objects/: _illumination_widget.py  _mda_widget.py  _min_max_widget.py  _mm_widget.py  _sample_explorer_widget.py  _save_widget.py  _shutters_widget.py  _snap_live_widget.py  _stages_widget.py  _startup_configurations_widget.py  _startup_widget.py  _toolbar.py
stylesheets/: extra.css
test/: .zarray
tests/: conftest.py  test_cam_objective.py  test_camera_roi.py  test_channel_widget.py  test_config.cfg  test_configurations.py  test_device_widget.py  test_dockwidgets.py  test_explorer.py  test_generator_mda.py  test_group_preset_widget.py  test_groups_and_presets.py  test_layer_scale.py  test_main.py  test_main_window.py  test_multid_widget.py  test_preset_widget.py  test_presets_widget.py  test_prop_browser.py  test_prop_widget.py  test_set_core.py  test_teardown.py  test_unimmcore.py
tests/core_widgets/: test_device_widget.py  test_exposure_widget.py  test_live_button.py  test_pixel_size_widget.py  test_preset_widget.py  test_presets_widget.py  test_prop_widget.py  test_property_browser.py  test_shutter_widget.py  test_snap_button_widget.py  test_stage_widget.py
typings/pymmcore/: __init__.pyi
