# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# https://peps.python.org/pep-0621/
[project]
name = "napari-micromanager"
description = "Micro-Manager GUI interface in napari."
keywords = ["microscope", "micro-manager", "pymmcore-plus"]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD 3-Clause License" }
authors = [
    { name = "Federico Gasparoli", email = "federico.gasparoli@gmail.com" },
    { name = "Talley Lambert", email = "talley.lambert@gmail.com" },
    { name = "Lucien Hinderling", email = "lucien.hinderling@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: napari",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware",
    "Topic :: System :: Hardware :: Hardware Drivers",
    "Topic :: Utilities",
]

dynamic = ["version"]
dependencies = [
    "fonticon-materialdesignicons6 >=6.1.45",
    "napari >=0.5.0",
    "pymmcore-plus >=0.18.0",
    "pymmcore-widgets >=0.12.0",
    "superqt >=0.5.1",
    "tifffile >=2023.2.3",
    "useq-schema >=0.4.1",
    "zarr >=2.18,<3",
]

[project.optional-dependencies]
PyQt6 = ["PyQt6 >=6.4.2"]
PySide6 = ["PySide6 >=6.9.0"]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-qt>=4.5.0",
    "numcodecs >0.14.0,<0.16; python_version >= '3.13'",
    "numcodecs >0.12.0,<0.16",
]
dev = [
    { include-group = "test" },
    "ipython>=8.18.1",
    "mypy>=1.15.0",
    "pdbpp>=0.11.6; sys_platform != 'win32'",
    "prek>=0.3.1",
    "pyqt6>=6.9.0",
    "rich>=14.0.0",
    "ruff>=0.11.8",
]
docs = ["mkdocs-material>=9.6.12", "mkdocstrings-python>=1.16.10"]

[project.urls]
Source = "https://github.com/pymmcore-plus/napari-micromanager"
Tracker = "https://github.com/pymmcore-plus/napari-micromanager/issues"
# Documentation = "https://pymmcore-plus.github.io/napari-micromanager"

[project.scripts]
napari-micromanager = "napari_micromanager.__main__:main"

[project.entry-points."napari.manifest"]
"napari-micromanager" = "napari_micromanager:napari.yaml"

[tool.uv.sources]
napari-micromanager = { workspace = true }

# https://docs.astral.sh/ruff/rules/
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "F",    # flakes
    "W",    # warnings
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TID",  # flake8-tidy-imports
    "TC",   # flake8-type-checking
]
ignore = [
    "D100", # Missing docstring in public module
    "D401", # First line should be in imperative mood
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "SLF"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true

# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore:distutils Version classes are deprecated",
    "ignore::DeprecationWarning:ipykernel",
    "ignore:<tifffile.TiffWriter.write> data with shape:DeprecationWarning:", # for napari
    "ignore:`np.bool8` is a deprecated alias::skimage",
    "ignore:Jupyter is migrating its paths to use standard platformdirs:",
    "ignore:\\nPyarrow will become a required dependency",
    "ignore::DeprecationWarning:docstring_parser",                            # via magicgui, in py312
    "ignore:Pickle, copy, and deepcopy::copy",                                # via napari -> pydantic/v1
    "ignore:PixelSizeWidget is deprecated.*:DeprecationWarning",
    "ignore:`json_encoders` is deprecated.*:DeprecationWarning",
]

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/*.py"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "fonticon_mdi6.*",
    "qtpy.*",
    "pymmcore_widgets.*",
    "superqt.*",
    "napari.*",
    "zarr.*",
    "tifffile.*",
]
ignore_missing_imports = true

# https://github.com/mgedmin/check-manifest#configuration
[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    "launch-dev.py",
    "codecov.yml",
    "mkdocs.yml",
    "docs/**",
    "uv.lock",
]

# https://coverage.readthedocs.io/en/6.4/config.html
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "raise AssertionError",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.run]
source = ["src/napari_micromanager"]

[tool.typos.default]
extend-ignore-identifiers-re = ["(?i)ome"]
