[metadata]
name = napari-micromanager
author = Federico Gasparoli, Talley Lambert
author_email = federico.gasparoli@gmail.com
license = BSD-3
license_file = LICENSE
description = GUI interface between napari and micromanager
url = https://github.com/tlambert03/napari-micromanager
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
setup_requires = setuptools_scm
python_requires = >=3.7
include_package_data = True
install_requires =
    napari[all]
    scikit-image
    tqdm
    pymmcore-plus @ git+https://github.com/tlambert03/pymmcore-plus.git
    useq-schema @ git+https://github.com/tlambert03/useq-schema.git


[options.extras_require]
testing =
    pytest
    pytest-qt

[options.entry_points]
napari.plugin =
    micromanager = micromanager_gui.__init__

[tool:pytest]
addopts = -v

[isort]
profile = black
src_paths=magicgui

[flake8]
exclude = _version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503, E203
per-file-ignores =
    tests/*.py:D
