[metadata]
name = napari-micromanager
author = Federico Gasparoli, Talley Lambert
author_email = federico.gasparoli@gmail.com
license = BSD-3
license_file = LICENSE
description = GUI interface between napari and micromanager
url = https://github.com/tlambert03/napari-micromanager
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
setup_requires = setuptools_scm
python_requires = >=3.8
include_package_data = True
install_requires =
    napari>=0.4.13
    scikit-image
    pymmcore-plus >=0.2.1
    useq-schema >=0.1.0
    magicgui >=0.3.0

[options.extras_require]
testing =
    pytest
    pytest-qt
    pyqt5
    pytest-cov

[options.entry_points]
napari.manifest =
    napari-micromanager = micromanager_gui:napari.yaml

[tool:pytest]
addopts = -v
filterwarnings =
    ignore::DeprecationWarning:ipykernel

[isort]
profile = black
src_paths = micromanager_gui

[flake8]
exclude = _version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503, E203
per-file-ignores =
    tests/*.py:D

[check-manifest]
ignore =
    micromanager_gui/_version.py
    .pre-commit-config.yaml
    micromanager_gui/Micro-Manager-*
    launch-dev.py
    tox.ini
    codecov.yml

[options.package_data]
micromanager_gui = napari.yaml
