[metadata]
name = napari-micromanager
author = Federico Gasparoli, Talley Lambert
author_email = federico.gasparoli@gmail.com
license = BSD-3
license_file = LICENSE
description = GUI interface between napari and micromanager
url = https://github.com/pymmcore-plus/napari-micromanager
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
setup_requires = setuptools_scm
python_requires = >=3.8
include_package_data = True
install_requires =
    napari >=0.4.13
    pymmcore-plus>=0.4.4
    useq-schema >=0.1.0
    superqt >=0.3.1
    fonticon-materialdesignicons6
    tifffile

[options.extras_require]
testing =
    pytest
    pytest-qt
    pytest-cov
    zarr
pyqt5 =
    PyQt5
pyside2 =
    PySide2
dev =
    black
    flake8
    flake8
    flake8-bugbear
    flake8-docstrings
    flake8-typing-imports
    isort
    mda-simulator
    mypy
    pre-commit

[options.entry_points]
napari.manifest =
    napari-micromanager = micromanager_gui:napari.yaml

[tool:pytest]
addopts = -v
filterwarnings =
    error:::micromanager_gui
    ignore::DeprecationWarning:ipykernel
    ignore:distutils Version classes are deprecated:DeprecationWarning:

[isort]
profile = black
src_paths = micromanager_gui

[flake8]
exclude = _version.py,.eggs,examples
max-line-length = 88
docstring-convention = all
min-python-version = 3.8.0
ignore = D100,D102,D107,D203,D212,D213,D401,D402,D413,D415,D416,W503,E203
per-file-ignores =
    tests/*.py:D
    _property_widget.py:E704
    _stage_widget.py:E241

[check-manifest]
ignore =
    micromanager_gui/_version.py
    .pre-commit-config.yaml
    micromanager_gui/Micro-Manager-*
    launch-dev.py
    tox.ini
    codecov.yml

[options.package_data]
micromanager_gui = napari.yaml
